fixed header spacing functions

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,8 @@
-header {
-    width: 100%;
-  position: fixed;
-  z-index: 444;
-}
-
 #menuBar {
     background-color: #efefef;
+    width: 100%;
+    position: fixed;
+    z-index: 444;
 }
 
 #background {
